<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:gravity="center"
  android:id="@+id/result_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
   
    <RadioGroup 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:id="@+id/check_group"
    android:visibility="gone"
    >
    <RadioButton 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/s"
    />
    
    <RadioButton 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/f"
    />
    
    <RadioButton 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/wsj"
    />
    
    </RadioGroup>
</LinearLayout>
