<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pop_title"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:src="@drawable/icon_circle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/clxq"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/clmc"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/car_detalis_carname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/zbsj"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/car_detalis_car_mastername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/lxdh"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/car_detalis_car_masterphone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cllx"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/car_detalis_car_kind"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/clms"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/car_detalis_car_describe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </TableRow>

</LinearLayout>