<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/LinearLayoutTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title"
        android:gravity="top"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="7.0dip"
            android:text="@string/main_rwgl"
            android:textColor="#F0F8FF"
            android:textSize="@dimen/global_title_textsize"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ImageView011"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="7.0dip"
        android:layout_marginTop="2dip"
        android:src="#00000000" >
    </ImageView>

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/LinearLayoutTop" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/main_home"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_rwlb"
                    style="@style/main_home_tab"
                    android:checked="true"
                    android:text="@string/main_home_rwlb" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rw_tab_line" />

                <RadioButton
                    android:id="@+id/radio_rwcx"
                    style="@style/main_home_tab"
                    android:text="@string/main_home_rwcx" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rw_tab_line" />

                <RadioButton
                    android:id="@+id/radio_rwzp"
                    style="@style/main_home_tab"
                    android:text="@string/main_home_rwzp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rw_tab_line" />

                <RadioButton
                    android:id="@+id/radio_rwtj"
                    style="@style/main_home_tab"
                    android:text="@string/main_home_rwtj" />
            </RadioGroup>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.0"
                android:visibility="gone" />
        </LinearLayout>
    </TabHost>

</RelativeLayout>