<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:focusable="false"
            android:gravity="right"
            android:text="@string/qymc"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/actEntName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6.0"
            android:focusable="true" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:focusable="true"
            android:gravity="right"
            android:text="@string/zfmb"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/actModel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:focusable="false" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:focusable="true"
            android:gravity="right"
            android:text="@string/rwms"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/task_bz"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="6.0"
            android:focusable="true"
            android:gravity="top" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5" />
    </LinearLayout>

</LinearLayout>